@@ -7,18 +7,18 @@ package ru.mail.android.androidmailproject;
 public class Helper {
     public static String aMonthBefore(String date) {
         String[] splited = date.split("-");
-        Integer a = new Integer(splited[1]);
+        Integer a = Integer.valueOf(splited[1]);
         --a;
         if (a == 0) {
             a = 12;
-            Integer b = new Integer(splited[0]);
+            Integer b = Integer.valueOf(splited[0]);
             --b;
             splited[0] = b.toString();
         }
         splited[1] = a.toString();
         if (splited[1].length() == 1)
             splited[1] = "0" + splited[1];
-        Integer c = new Integer(splited[2]);
+        Integer c = Integer.valueOf(splited[2]);
         if (c > 28)
             splited[2] = "28";
         return splited[0] + "-" + splited[1] + "-" + splited[2];
